k8s/110-dns-01-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dns-01-test
  namespace: default
spec:
  selector:
    app: dns-01-test
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
